Fix login spacing.

--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -31,3 +31,8 @@
 	font-size: 13px;
 	margin-top: 1rem;
 }
+
+form p {
+	margin-top: 1rem;
+	font-size: 14px;
+}
